# zero2prod

./: Cargo.toml  Dockerfile
migrations/: 20241206192149_create_subscriptions_table.sql
scripts/: init_db.sh  migration.sh  run_migrations.sh
src/: configuration.rs  configuration.yaml  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
