[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
config = "0.14"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
# env_logger = "0.9"
# log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "^0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "^0.3"
tracing-log = "0.2"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
